--- a/package.json
+++ b/package.json
@@ -3,17 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "tsx server.ts",
-    "build": "next build && tsc server.ts --outDir ./ --target es2020 --module commonjs --esModuleInterop --skipLibCheck",
-    "start": "NODE_ENV=production node server.js",
-    "lint": "next lint"
+    "dev": "npm run build:server && NODE_ENV=development node dist/server.js",
+    "build": "next build",
+    "build:server": "tsc -p tsconfig.server.json",
+    "start": "npm run build:server && NODE_ENV=production node dist/server.js",
+    "clean": "rm -rf dist",
+    "lint": "next lint",
+    "deploy": "./deploy.sh",
+    "destroy": "./destroy.sh",
+    "aws:install": "npm install -g serverless && npm install",
+    "aws:configure": "aws configure",
+    "aws:status": "aws sts get-caller-identity"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@types/qrcode": "^1.5.5",
-    "autoprefixer": "^10.4.21",
     "chess.js": "^1.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -27,16 +33,21 @@
     "socket.io-client": "^4.7.5",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.3.0",
-    "tailwindcss-animate": "^1.0.7",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.7",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "@types/uuid": "^9.0.8",
-    "tailwindcss": "^4",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.4",
+    "postcss": "^8.5.4",
+    "serverless": "^3.38.0",
+    "serverless-s3-sync": "^3.2.0",
+    "tailwindcss": "^3.4.17",
+    "tailwindcss-animate": "^1.0.7",
     "ts-node": "^10.9.2",
     "tsx": "^4.7.0",
     "tw-animate-css": "^1.3.0",
