--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,7 @@
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "server.ts"],
-  "exclude": ["node_modules"],
+  "exclude": ["node_modules", "dist", "build"],
   "ts-node": {
     "esm": true,
     "compilerOptions": {
