--- a/package.json
+++ b/package.json
@@ -3,52 +3,58 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "npm run build:server && NODE_ENV=development node dist/server.js",
-    "build": "next build",
-    "build:server": "tsc -p tsconfig.server.json",
-    "start": "npm run build:server && NODE_ENV=production node dist/server.js",
-    "clean": "rm -rf dist",
-    "lint": "next lint",
-    "deploy": "./deploy.sh",
-    "destroy": "./destroy.sh",
-    "aws:install": "npm install -g serverless && npm install",
-    "aws:configure": "aws configure",
-    "aws:status": "aws sts get-caller-identity"
+    "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\"",
+    "dev:frontend": "npx next dev --port 3000",
+    "dev:backend": "npm run build:server && NODE_ENV=development node dist/server.js",
+    "build": "next build && npm run build:server",
+    "build:server": "tsc -p tsconfig.server.json && tsc-alias -p tsconfig.server.json",
+    "deploy:aws": "cd terraform && terraform apply",
+    "deploy:aws:plan": "cd terraform && terraform plan",
+    "deploy:aws:destroy": "cd terraform && terraform destroy",
+    "start": "NODE_ENV=production node dist/server.js",
+    "clean": "rm -rf dist .next out",
+    "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.821.0",
+    "@aws-sdk/lib-dynamodb": "^3.821.0",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.12",
+    "@types/express": "^5.0.2",
     "@types/qrcode": "^1.5.5",
-    "chess.js": "^1.2.0",
+    "@types/uuid": "^10.0.0",
+    "chess.js": "^1.0.0-beta.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
-    "lucide-react": "^0.511.0",
+    "express": "^5.1.0",
+    "lucide-react": "^0.468.0",
     "next": "15.3.2",
+    "process": "^0.11.10",
     "qrcode": "^1.5.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "socket.io": "^4.7.5",
-    "socket.io-client": "^4.7.5",
-    "sonner": "^2.0.3",
-    "tailwind-merge": "^3.3.0",
-    "uuid": "^9.0.1"
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
+    "sonner": "^1.7.1",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/uuid": "^9.0.8",
     "autoprefixer": "^10.4.21",
+    "concurrently": "^9.1.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "postcss": "^8.5.4",
-    "serverless": "^3.38.0",
-    "serverless-s3-sync": "^3.2.0",
     "tailwindcss": "^3.4.17",
-    "tailwindcss-animate": "^1.0.7",
     "ts-node": "^10.9.2",
+    "tsc-alias": "^1.8.16",
     "tsx": "^4.7.0",
     "tw-animate-css": "^1.3.0",
     "typescript": "^5"
